--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Django==4.7.1
+Django==4.2.4
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-mysqlclient==2.2.0
+psycopg2-2.9.6
 gunicorn==20.1.0
 django-cors-headers==3.13.0
