--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Django==4.2.4
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-psycopg2-2.9.6
-gunicorn==20.1.0
-django-cors-headers==3.13.0
+Django
+djangorestframework
+djangorestframework-simplejwt
+psycopg2
+gunicorn
