--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django>=3.2,<4.0
+Django>=3.2,<4.2
 djangorestframework>=3.12,<4.0
-djangorestframework-simplejwt>=4.7,<5.0
-psycopg2>=2.9,<3.0
+djangorestframework-simplejwt>=4.7,<5.2
+psycopg2>=2.9
 gunicorn>=20.1,<21.0
