--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ djangorestframework>=3.12,<4.0
 djangorestframework-simplejwt>=4.7,<5.2
 psycopg2>=2.9
 gunicorn>=20.1,<21.0
+django-cors-headers >= 3.9.0 
